--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".tampilan.menu"></activity>
+        <activity android:name=".tampilan.pelangganview"></activity>
+        <activity android:name=".tampilan.Login" />
+        <activity android:name=".activities.PelangganActivity" />
+        <activity
+            android:name=".tampilan.menu"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".tampilan.Argan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".tampilan.DataCuciMasuk" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
