--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.laundryargan">
-
-    <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,17 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-<<<<<<< HEAD
+
         <activity android:name=".tampilan.pelangganview"></activity>
         <activity android:name=".tampilan.Login" />
         <activity android:name=".activities.PelangganActivity" />
-        <activity
-            android:name=".tampilan.menu"
+        <activity android:name=".tampilan.menu"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-=======
         <activity android:name=".tampilan.Laporan"></activity>
-        <activity android:name=".tampilan.menu" />
->>>>>>> origin/master
+        <activity android:name=".tampilan.pelangganActivity"></activity>
+
         <activity android:name=".tampilan.Argan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,6 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".tampilan.DataCuciMasuk" />
         <activity android:name=".MainActivity" />
     </application>
