--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
 //GSON Converter
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    //implementation 'com.android.volley:volley:1.1.0'
 }
