--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,22 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".tampilan.RegisterActivity"></activity>
+        <activity android:name=".tampilan.UserActivity" />
+        <activity android:name=".tampilan.DetailActivity" />
+        <activity android:name=".tampilan.HeaderActivity" />
+        <activity android:name=".tampilan.pelangganview" />
+        <activity android:name=".tampilan.Login">
 
-        <activity android:name=".tampilan.pelangganview"></activity>
-        <activity android:name=".tampilan.Login" />
+        </activity>
+
         <activity android:name=".activities.PelangganActivity" />
         <activity
             android:name=".tampilan.menu"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-
-        <activity android:name=".tampilan.Laporan"></activity>
-        <activity android:name=".tampilan.menu" />
-
+        <activity android:name=".tampilan.Laporan" />
+        <activity android:name=".tampilan.pelangganActivity" />
+        <activity android:name=".tampilan.BarangActivity" />
         <activity android:name=".tampilan.Argan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
