--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logo_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+
+        android:networkSecurityConfig="@xml/network_security_config">
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <activity android:name=".tampilan.RegisterActivity"></activity>
         <activity android:name=".tampilan.UserActivity" />
         <activity android:name=".tampilan.DetailActivity" />
@@ -24,7 +28,9 @@
         <activity android:name=".activities.PelangganActivity" />
         <activity
             android:name=".tampilan.menu"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
+        </activity>
         <activity android:name=".tampilan.Laporan" />
         <activity android:name=".tampilan.pelangganActivity" />
         <activity android:name=".tampilan.BarangActivity" />
