Login Selesai, Register biar dilaa :*

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.laundryargan">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -13,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-
+        android:name=".app.AppController"
         android:networkSecurityConfig="@xml/network_security_config">
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <activity android:name=".tampilan.RegisterActivity"></activity>
@@ -43,6 +44,7 @@
         </activity>
         <activity android:name=".tampilan.DataCuciMasuk" />
         <activity android:name=".MainActivity" />
+
     </application>
 
 </manifest>
