--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,32 +6,30 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-
+        android:name=".app.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/logo_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/logo_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true"
-        android:name=".app.AppController"
-        android:networkSecurityConfig="@xml/network_security_config">
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+        android:usesCleartextTraffic="true">
+        <activity android:name=".tampilan.cobaTampil"></activity>
+
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
 
         <activity android:name=".tampilan.UserActivity" />
         <activity android:name=".tampilan.DetailActivity" />
         <activity android:name=".tampilan.HeaderActivity" />
         <activity android:name=".tampilan.pelangganview" />
-        <activity android:name=".tampilan.Login">
-
-        </activity>
-
+        <activity android:name=".tampilan.Login"></activity>
         <activity android:name=".activities.PelangganActivity" />
         <activity
             android:name=".tampilan.menu"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
-        </activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
         <activity android:name=".tampilan.Laporan" />
         <activity android:name=".tampilan.pelangganActivity" />
         <activity android:name=".tampilan.BarangActivity" />
@@ -44,7 +42,7 @@
         </activity>
         <activity android:name=".tampilan.DataCuciMasuk" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".tampilan.RegisterActivity"/>
+        <activity android:name=".tampilan.RegisterActivity" />
     </application>
 
 </manifest>
